# insight-os

./: .env.example  .gitignore  CHANGELOG.md  INSIGHT-PUSH-STEPS.txt  LICENSE  README.md  build-packages.mjs  package-lock.json  package.json  tsconfig.base.json
apps/web/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: writing-config-dev-plan.md
prototype/: PROMO-COPY.md  RELEASE-NOTES-v1.0.0.md  RELEASE-NOTES-v1.1.0.md  RELEASE-NOTES-v1.1.1.md  RELEASE-NOTES-v1.2.0.md  RELEASE-NOTES-v1.2.1.md  RELEASE-NOTES-v1.3.0.md  RELEASE-NOTES-v1.3.1.md  RELEASE-NOTES-v1.5.0.md  RELEASE-NOTES-v1.7.0.md  RELEASE-NOTES-v1.7.1.md  ab-blue-cool.html  ab-compare.html  architecture.html  core-beliefs.html  embed-widget.html  insight-graph-v2-dark.html  insight-kernel-onboarding.html  insight-kernel-v2.html  insight-os-redesign.html  settings-split-comparison.html  sidebar-prototype.html  writing-config.html
scripts/: classify-all.mjs  index-assets.mjs  patch-api-null-check.mjs  patch-null-check-universal.mjs  patch-page-null-check.mjs  seed-topics.mjs  setup-monorepo-links.mjs  smoke-test-v1.2.0.sh
tests/: candidates.test.mjs  config.test.mjs  daily-loop.test.mjs  indexer-integration.test.mjs  normalize.test.mjs  output-count.test.mjs  output-multi.test.mjs  parser.test.mjs  prompts.test.mjs  reddit-fetcher.test.mjs  related-assets.test.mjs  rss-fetcher.test.mjs  rsshub-fetcher.test.mjs  score-candidate.test.mjs  search-and-import.test.mjs  seed-six-layers.test.mjs  topics.test.mjs  (+4 more)
(+219 files in other folders)
