[package]
name = "insight-asset-os"
version = "1.0.0"
description = "把零散经验转化为可调用、可输出、可验证、可进化的管理思想资产"
authors = ["Vincent"]
license = "MIT"
repository = "https://github.com/yourusername/insight-asset-os"
edition = "2021"
rust-version = "1.70"

[lib]
name = "insight_asset_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
